# CW_mailing_service

./: pyproject.toml  readme.md
config/: settings.py
