[tool.poetry]
name = "cw-mailing-service"
version = "0.1.0"
description = ""
authors = ["BersUmar <umar-03@inbox.ru>"]
readme = "README.md"
packages = [{include = "cw_mailing_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
